"Add to cart" button added

--- a/SportsStore/Views/_ViewImports.cshtml
+++ b/SportsStore/Views/_ViewImports.cshtml
@@ -1,4 +1,9 @@
 ﻿@using SportsStore.Models
 @using SportsStore.Models.ViewModels
+@model SportsStore.Models.ViewModels.ProductsListViewModel
+    
+@*this will use product summary views*@
+@using SportsStore.Infrastructure
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper SportsStore.Infrastructure.*, SportsStore
