--- a/SportsStore/Views/Shared/ProductSummary.cshtml
+++ b/SportsStore/Views/Shared/ProductSummary.cshtml
@@ -9,12 +9,12 @@
         </h4>
     </div>
 
-    @*to add and submit back to server for cart item*@
-        <form id="@Model.ProductID" asp-action="AddToCart"
+    @* this form to add and submit back to server for cart item*@
+    <form id="@Model.ProductID" asp-action="AddToCart"
           asp-controller="Cart" method="post">
         <input type="hidden" asp-for="ProductID" />
         <input type="hidden" name="returnUrl"
-               value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+               value="@ViewContext.HttpContext.Request.PathAndQuery()"/>
         <span class="card-text p-1">
             @Model.Description
             <button type="submit"
