--- a/SportsStore/Views/Shared/_Layout.cshtml
+++ b/SportsStore/Views/Shared/_Layout.cshtml
@@ -6,11 +6,20 @@
     <title>SportsStore</title>
     <link rel="stylesheet"
           asp-href-include="/lib/bootstrap/**/*.min.css"
-            asp-href-exclude="**/*-reboot*,**/*-grid*"/>
+          asp-href-exclude="**/*-reboot*,**/*-grid*" />
+    @*Adding ref all min css of fontAwesome*@
+    <link rel="stylesheet" asp-href-include="/lib/fontawesome/css/*.css" />
+
 </head>
 <body>
     <div class="navbar navbar-inverse bg-inverse" role="navigation">
-        <a class="navbar-brand" href="#">SPORTS STORE</a>
+        @*Adding ref nav tab at the right corner*@
+        <div class="row">
+            <a class="col navbar-brand" href="#">SPORTS STORE</a>
+            <div class="col-4 text-right">
+                @await Component.InvokeAsync("CartSummary")
+            </div>
+        </div>
     </div>
 
     <div class="row m-1 p-1">
